# eikon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENTS.md  DEVELOPMENT-PLAN.md  README.md  eikon.code-workspace  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish-noarch.yml
conda.recipe/: meta.yaml
config/: releaserc.toml
config/dictionaries/: python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md
docs/api/: config.md  export.md  ext.md  layout.md  registry.md  render.md  spec.md  style.md  types.md
docs/guide/: cli.md  configuration.md  export.md  extensions.md  getting-started.md  installation.md  layouts.md  registry.md  rendering.md  specifications.md  styles.md  usage.md
examples/: 01_single_panel.py  02_multi_panel.py  03_yaml_spec.py  04_custom_plot_type.py  05_export_formats.py
src/eikon/: __init__.py  __main__.py  _types.py  cli.py  exceptions.py
src/eikon/cli/: __init__.py  _app.py
src/eikon/cli/commands/: __init__.py  batch.py  info.py  init.py  registry.py  render.py  render_registry.py  validate.py
src/eikon/config/: __init__.py  _defaults.py  _loader.py  _resolver.py  _schema.py  _session.py  _validation.py
src/eikon/contrib/: __init__.py  _matplotlib.py  _seaborn.py
src/eikon/export/: __init__.py  _batch.py  _config.py  _handlers.py  _metadata.py  _paths.py  _sanitize.py
src/eikon/ext/: __init__.py  _discovery.py  _hooks.py  _plot_types.py  _registry.py  _transforms.py
src/eikon/layout/: __init__.py  _builder.py  _colorbars.py  _constraints.py  _grid.py  _insets.py  _placement.py  _shared_axes.py
src/eikon/registry/: __init__.py  _index.py  _locking.py  _query.py  _registry.py
src/eikon/render/: __init__.py  _context.py  _data.py  _drawing.py  _handle.py  _margin_labels.py  _pipeline.py  _protocols.py
src/eikon/spec/: __init__.py  _data.py  _figure.py  _margin_labels.py  _override.py  _panel.py  _parse.py
src/eikon/style/: __init__.py  _composer.py  _loader.py  _presets.py  _rcparams.py  _sheet.py
tests/: conftest.py
tests/test_eikon/: __init__.py  test_cli.py  test_exceptions.py  test_init.py  test_main.py  test_types.py
tests/test_eikon/test_config/: test_loader.py  test_resolver.py  test_schema.py  test_validation.py
tests/test_eikon/test_contrib/: test_matplotlib.py  test_seaborn.py
tests/test_eikon/test_export/: test_batch.py  test_config.py  test_handlers.py  test_metadata.py  test_paths.py  test_pipeline_export.py  test_sanitize.py
tests/test_eikon/test_ext/: test_discovery.py  test_hooks.py  test_plot_types.py
tests/test_eikon/test_layout/: test_builder.py  test_colorbars.py  test_constraints.py  test_grid.py  test_insets.py  test_placement.py  test_shared_axes.py
tests/test_eikon/test_registry/: test_index.py  test_locking.py  test_query.py  test_registry.py
tests/test_eikon/test_render/: test_context.py  test_data_flow.py  test_drawing.py  test_handle.py  test_margin_labels.py  test_pipeline.py  test_protocols.py  test_registry_resolution.py
tests/test_eikon/test_spec/: test_figure.py  test_margin_labels.py  test_override.py  test_parse.py
tests/test_eikon/test_style/: test_composer.py  test_loader.py  test_presets.py  test_rcparams.py  test_sheet.py
